--- a/notebooks/combine-data.ipynb
+++ b/notebooks/combine-data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,13 @@
     "with open('../data/maps/us-cities.json') as file:\n",
     "    cities_data = json.load(file)\n",
     "\n",
-    "with open('../data/pollution/pollution_data.json') as file:\n",
+    "with open('../data/pollution/pollution_data_simple.json') as file:\n",
     "    pollution_data = json.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,11 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('cities_with_pollution.json', 'w') as f:\n",
+    "with open('cities_with_pollution_simple.json', 'w') as f:\n",
     "    json.dump(cities_data, f)"
    ]
   }
